# image_mirroring

./: .gitignore  CMakeLists.txt  INSTALL  README.md  run.sh
data/: 5.1.09.tiff2
data/mirrored_images/: 1.1.01_new.tiff  1.1.02_new.tiff  1.1.03_new.tiff  1.1.04_new.tiff  1.1.05_new.tiff  1.1.06_new.tiff  1.1.07_new.tiff  1.1.08_new.tiff  1.1.09_new.tiff  1.1.10_new.tiff  1.1.11_new.tiff  1.1.12_new.tiff  1.1.13_new.tiff  1.2.01_new.tiff  1.2.02_new.tiff  1.2.03_new.tiff  1.2.04_new.tiff  1.2.05_new.tiff  1.2.06_new.tiff  1.2.07_new.tiff  1.2.08_new.tiff  1.2.09_new.tiff  1.2.10_new.tiff  1.2.11_new.tiff  1.2.12_new.tiff  1.2.13_new.tiff  1.3.01_new.tiff  1.3.02_new.tiff  1.3.03_new.tiff  1.3.04_new.tiff  1.3.05_new.tiff  1.3.06_new.tiff  1.3.07_new.tiff  1.3.08_new.tiff  1.3.09_new.tiff  1.3.10_new.tiff  1.3.11_new.tiff  1.3.12_new.tiff  1.3.13_new.tiff  1.4.01_new.tiff  (+111 more)
lib/UtilNPP/: ImageIO.h
src/: CMakeLists.txt  image_filter.cpp.amltmp  mirror_image.cpp
